Prevent the record count from wrapping in the results toolbar

--- a/src/scss/workflows/_results.scss
+++ b/src/scss/workflows/_results.scss
@@ -31,6 +31,12 @@
         }
     }
 
+    .result-count {
+        display: block;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
     .serrano-version-warning {
         text-align: center;
     }
